Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-55555

[CDC]: Couchstore bucket's collections report history=true in cbstats

    XMLWordPrintable

Details

    Description

      Scenario:

      • Create couchstore bucket

        Created bucket "default" of type: couchbase
        [{num_replicas,0},
         {replica_index,false},
         {ram_quota,1822425088},
         {durability_min_level,none},
         {autocompaction,false},
         {purge_interval,undefined},
         {flush_enabled,false},
         {num_threads,3},
         {eviction_policy,value_only},
         {conflict_resolution_type,seqno},
         {storage_mode,couchstore},
         {max_ttl,0},
         {compression_mode,passive}]

      • Create few collections
      • Run "/opt/couchbase/bin/cbstats localhost:11210 -u Administrator -p password -b default collections"

      Seeing history flag in the collection stats reports as 'true'

      # /opt/couchbase/bin/cbstats localhost:11210 -u Administrator -p password all | grep couchdbep_backend:                                                couchdb# /opt/couchbase/bin/cbstats localhost:11210 -u Administrator -p password collections
       0x0:0x0:collections_mem_used: 0
       0x0:0x0:data_size:            0
       0x0:0x0:history:              false
       0x0:0x0:items:                0
       0x0:0x0:name:                 _default
       0x0:0x0:ops_delete:           0
       0x0:0x0:ops_get:              0
       0x0:0x0:ops_store:            0
       0x0:0x0:scope_name:           _default
       0x0:0x8:collections_mem_used: 0
       0x0:0x8:data_size:            95232
       0x0:0x8:history:              true
       0x0:0x8:items:                0
       0x0:0x8:name:                 c1
       0x0:0x8:ops_delete:           0
       0x0:0x8:ops_get:              0
       0x0:0x8:ops_store:            0
       0x0:0x8:scope_name:           _default
       manifest_uid:                 1

      Expected behavior:

      History field should be 'false' for non-magma buckets

      Attachments

        For Gerrit Dashboard: MB-55555
        # Subject Branch Project Status CR V

        Activity

          People

            raghav.sk Raghav S K
            ashwin.govindarajulu Ashwin Govindarajulu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              PagerDuty