MB-55555: Include ep_types.h in collection_types.cc

To ensure that CanDeduplicate ostream operator is visible to
the module.

Change-Id: I70e736a9091a90a44093d2201ee8aff127b65bec
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/186717
Well-Formed: Restriction Checker
Tested-by: Jim Walker <jim@couchbase.com>
Reviewed-by: James H <james.harrison@couchbase.com>